testsuite/tests/parse-errors/unclosed_paren_module_expr1.compilers.reference
File "unclosed_paren_module_expr1.ml", line 9, characters 0-0:
Error: Syntax error: ')' expected
File "unclosed_paren_module_expr1.ml", line 8, characters 11-12:
8 | module M = (struct end : sig end
               ^
  This '(' might be unmatched
